--- a/assets/base.css
+++ b/assets/base.css
@@ -3605,3 +3605,164 @@ details-disclosure > details {
     transform: translateX(100%) scaleX(0);
   }
 }
+
+
+
+
+
+/* Collection styles */
+
+#main-collection-filters.facets-wrapper{
+  padding: 24px 20px;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+#main-collection-filters .facets-container{
+  padding: 0;
+}
+
+#main-collection-filters .mobile-facets__open-label.button-label {
+  display: none;
+}
+
+.collection.page-width{
+  padding: 0 2rem;
+}
+
+.collection .grid.product-grid{
+  margin-top: 2rem;
+  column-gap: 0.8rem;
+  margin-bottom: 0;
+}
+
+.collection .grid.product-grid::after{
+  content: '';
+  display: block;
+  height: 1px;
+  width: calc(100% + 4rem);
+  background-color: rgba(0, 0, 0, 0.2);
+  margin-left: -2rem;
+  margin-right: -2rem;
+  margin-top: 0.8rem;
+}
+
+.collection .grid__item{
+  width: calc(50% - 0.8rem / 2);
+}
+
+.collection .grid__item .card__inner,
+.collection .grid__item .card__inner .card__media {
+  min-height: 170px;
+  max-height: 170px;
+  border-radius: 8px;
+}
+
+
+.collection .grid__item .card__media .media img{
+  object-fit: contain;
+}
+
+.collection .grid__item  .card__information{
+  padding: 1.5rem 0 1.2rem 0;
+}
+
+.collection .grid__item  .card__information .card__heading{
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  line-height: 130%;
+  text-align: center;
+}
+
+
+.collection .price{
+  display: flex;
+  justify-content: center;
+  line-height: 130%;
+  margin-bottom: 16px;
+}
+
+.collection .price-item.price-item--regular,
+.collection .price-item.price-item--sale.price-item--last{
+ font-size: 1.3rem;
+ line-height: 130%;
+ font-family: var(--font-body-family-medium);
+ font-weight: 700;
+}
+
+.collection .price-item.price-item--sale.price-item--last{
+  font-size: 1.6rem; 
+}
+
+.collection .quantity.cart-quantity{
+  width: 100%;
+  margin-bottom: 16px;
+}
+
+.collection .quantity::after{
+  border-radius: 8px;
+}
+
+.collection .quick-add__submit{
+ font-size: 1.3rem;
+ line-height: 130%;
+ font-weight: 700;
+ text-transform: uppercase;
+ font-family: var(--font-heading-family);
+ padding: 1.9rem 0;
+ max-height: 48px;
+}
+
+.collection .quick-add__submit::after{
+  border-radius: 8px;
+}
+
+
+.collection .product-form__input--pill input[type=radio] + label{
+  border: var(--variant-pills-border-width) solid rgba(var(--color-foreground), var(--variant-pills-border-opacity));
+  background-color: rgb(var(--color-background));
+  color: rgba(var(--color-foreground));
+  border-radius: 4px;
+  color: rgb(var(--color-foreground));
+  display: inline-block;
+  padding: 0.6rem 1.2rem;
+  font-size: 1.4rem;
+  letter-spacing: 0.1rem;
+  line-height: 1;
+  text-align: center;
+  transition: border var(--duration-short) ease;
+  cursor: pointer;
+  position: relative;
+  font-family: var(--font-body-family-medium);
+  font-weight: 700;
+  font-size: 1.1rem;
+}
+
+.collection .product-form__input--pill input[type=radio]:checked + label{
+  background-color: rgb(var(--color-foreground));
+  color: rgb(var(--color-background));
+}
+
+.collection .product-form__input input[type=radio]{
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+  position: absolute;
+  height: 1px;
+  width: 1px;
+}
+
+.collection .product-form__input{
+  flex: 0 0 100%;
+  padding: 0;
+  margin: 0 0 1.6rem 0;
+  max-width: 44rem;
+  min-width: fit-content;
+  border: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+
+.collection .form__label{
+  display: none;
+}
