--- a/snippets/icon-filter.liquid
+++ b/snippets/icon-filter.liquid
@@ -1,4 +1,4 @@
-<svg
+{% comment %} <svg
   class="icon icon-filter"
   aria-hidden="true"
   focusable="false"
@@ -7,4 +7,15 @@
   fill="none"
 >
   <path fill-rule="evenodd" d="M4.833 6.5a1.667 1.667 0 1 1 3.334 0 1.667 1.667 0 0 1-3.334 0ZM4.05 7H2.5a.5.5 0 0 1 0-1h1.55a2.5 2.5 0 0 1 4.9 0h8.55a.5.5 0 0 1 0 1H8.95a2.5 2.5 0 0 1-4.9 0Zm11.117 6.5a1.667 1.667 0 1 0-3.334 0 1.667 1.667 0 0 0 3.334 0ZM13.5 11a2.5 2.5 0 0 1 2.45 2h1.55a.5.5 0 0 1 0 1h-1.55a2.5 2.5 0 0 1-4.9 0H2.5a.5.5 0 0 1 0-1h8.55a2.5 2.5 0 0 1 2.45-2Z" fill="currentColor"/>
+</svg> {% endcomment %}
+
+
+<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon icon-filter"
+  aria-hidden="true"
+  focusable="false">
+<rect y="3" width="24" height="3" rx="1.5" fill="black"/>
+<circle cx="15.5" cy="4.5" r="3" fill="white" stroke="black" stroke-width="3"/>
+<rect y="18" width="24" height="3" rx="1.5" fill="black"/>
+<circle cx="8.5" cy="19.5" r="3" fill="white" stroke="black" stroke-width="3"/>
 </svg>
+
