--- a/assets/base.css
+++ b/assets/base.css
@@ -3603,18 +3603,18 @@ details-disclosure > details {
   display: none;
 }
 
-.collection.page-width {
+.collection.bulk-standard-block.page-width {
   padding: 0 2rem;
 }
 
-.collection .grid.product-grid {
+.collection.bulk-standard-block .grid.product-grid {
   margin-top: 0;
   padding-top: 2rem;
   column-gap: 0.8rem;
   margin-bottom: 0;
 }
 
-.collection .grid.product-grid::after {
+.collection.bulk-standard-block .grid.product-grid::after {
   content: "";
   display: block;
   height: 1px;
@@ -3625,22 +3625,22 @@ details-disclosure > details {
   margin-top: 0.8rem;
 }
 
-.collection .grid__item {
+.collection.bulk-standard-block .grid__item {
   width: calc(50% - 0.8rem / 2);
 }
 
-.collection .grid__item .card__inner,
-.collection .grid__item .card__inner .card__media {
+.collection.bulk-standard-block .grid__item .card__inner,
+.collection.bulk-standard-block .grid__item .card__inner .card__media {
   min-height: 170px;
   max-height: 170px;
   border-radius: 8px;
 }
 
-.collection .grid__item .card__information {
+.collection.bulk-standard-block .grid__item .card__information {
   padding: 1.5rem 0 1.2rem 0;
 }
 
-.collection .grid__item .card__heading.title-wrapper {
+.collection.bulk-standard-block .grid__item .card__heading.title-wrapper {
   text-transform: uppercase;
   font-size: 1.4rem;
   line-height: 130%;
@@ -3648,35 +3648,35 @@ details-disclosure > details {
   margin-bottom: 16px;
 }
 
-.collection .price {
+.collection.bulk-standard-block .price {
   display: flex;
   justify-content: center;
   line-height: 130%;
   margin-bottom: 16px;
 }
 
-.collection .price-item.price-item--regular,
-.collection .price-item.price-item--sale.price-item--last {
+.collection.bulk-standard-block .price-item.price-item--regular,
+.collection.bulk-standard-block .price-item.price-item--sale.price-item--last {
   font-size: 1.3rem;
   line-height: 130%;
   font-family: var(--font-body-family-medium);
   font-weight: 700;
 }
 
-.collection .price-item.price-item--sale.price-item--last {
+.collection.bulk-standard-block .price-item.price-item--sale.price-item--last {
   font-size: 1.6rem;
 }
 
-.collection .quantity.cart-quantity {
+.collection.bulk-standard-block .quantity.cart-quantity {
   width: 100%;
   margin-bottom: 16px;
 }
 
-.collection .quantity::after {
+.collection.bulk-standard-block .quantity::after {
   border-radius: 8px;
 }
 
-.collection .quick-add__submit {
+.collection.bulk-standard-block .quick-add__submit {
   font-size: 1.3rem;
   line-height: 130%;
   font-weight: 700;
@@ -3686,11 +3686,11 @@ details-disclosure > details {
   max-height: 48px;
 }
 
-.collection .quick-add__submit::after {
+.collection.bulk-standard-block .quick-add__submit::after {
   border-radius: 8px;
 }
 
-.collection .product-form__input--pill input[type="radio"] + label {
+.collection.bulk-standard-block .product-form__input--pill input[type="radio"] + label {
   border: var(--variant-pills-border-width) solid rgba(var(--color-foreground), var(--variant-pills-border-opacity));
   background-color: rgb(var(--color-background));
   color: rgba(var(--color-foreground));
@@ -3710,12 +3710,12 @@ details-disclosure > details {
   font-size: 1.1rem;
 }
 
-.collection .product-form__input--pill input[type="radio"]:checked + label {
+.collection.bulk-standard-block .product-form__input--pill input[type="radio"]:checked + label {
   background-color: rgb(var(--color-foreground));
   color: rgb(var(--color-background));
 }
 
-.collection .product-form__input input[type="radio"] {
+.collection.bulk-standard-block .product-form__input input[type="radio"] {
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
   position: absolute;
@@ -3723,7 +3723,7 @@ details-disclosure > details {
   width: 1px;
 }
 
-.collection .product-form__input {
+.collection.bulk-standard-block .product-form__input {
   flex: 0 0 100%;
   padding: 0;
   margin: 0 0 1.6rem 0;
@@ -3735,12 +3735,12 @@ details-disclosure > details {
   gap: 0.5rem;
 }
 
-.collection .form__label {
+.collection.bulk-standard-block .form__label {
   display: none;
 }
 
-.collection .product-form__input--pill input[type=radio]:disabled + label,
-.collection .product-form__input--pill input[type=radio].disabled + label{
+.collection.bulk-standard-block .product-form__input--pill input[type=radio]:disabled + label,
+.collection.bulk-standard-block .product-form__input--pill input[type=radio].disabled + label{
   opacity: 0.4;
   pointer-events: none;
 }
@@ -3749,19 +3749,24 @@ details-disclosure > details {
   display: none !important;
 }
 
-.collection .quantity.cart-quantity {
+.collection.bulk-standard-block .quantity.cart-quantity {
   position: relative;
   z-index: 999;
 }
 
 
-.collection .quick-add__submit,
-.collection .variant-wrapper{
+.collection.bulk-standard-block .quick-add__submit,
+.collection.bulk-standard-block .variant-wrapper{
   position: relative;
   z-index: 999;
 }
 
 @media screen and (min-width: 750px) {
+  #main-collection-filters {
+   border-top: 1px solid rgba(0, 0, 0, 0.2);
+   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  }
+
   #main-collection-filters .facets__summary {
     margin-bottom: 0;
   }
@@ -3812,9 +3817,21 @@ details-disclosure > details {
     width: 12px;
     top: calc(50% - 0.7rem);
   }
+
+  .collection.bulk-standard-block.page-width{
+    margin-bottom: 20px;
+  }
+
+  .pagination-wrapper {
+    margin-top: 2rem !important;
+  }
 }
 
 @media screen and (min-width: 990px) {
+  .collection.bulk-standard-block.page-width{
+    margin-bottom: 20px !important;
+  }
+
   #main-collection-filters.facets-wrapper {
     max-width: 100%;
   }
@@ -3824,13 +3841,13 @@ details-disclosure > details {
     margin: auto;
   }
 
-  .collection.page-width {
+  .collection.bulk-standard-block.page-width {
     max-width: 1265px;
     margin: auto;
     padding: 0;
   }
 
-  .collection .grid.product-grid {
+  .collection.bulk-standard-block .grid.product-grid {
     padding-top: 0;
     column-gap: 0;
     row-gap: 0;
@@ -3838,81 +3855,83 @@ details-disclosure > details {
     border-left: 1px solid rgba(0, 0, 0, 0.2);
   }
 
-  .collection .grid--4-col-desktop .grid__item {
+  .collection.bulk-standard-block .grid--4-col-desktop .grid__item {
     max-width: calc(100% / 4);
     padding-top: 31px;
     border-right: 1px solid rgba(0, 0, 0, 0.2);
   }
 
-  .collection .grid--4-col-desktop .grid__item:nth-child(4n) {
+  .collection.bulk-standard-block .grid--4-col-desktop .grid__item:nth-child(4n) {
     border-right: none;
   }
 
-  .collection .grid--4-col-desktop .grid__item .card-wrapper {
+  .collection.bulk-standard-block .grid--4-col-desktop .grid__item .card-wrapper {
     padding: 0 1.5rem;
   }
 
-  .collection .grid--4-col-desktop .grid__item .card {
+  .collection.bulk-standard-block .grid--4-col-desktop .grid__item .card {
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-top: 16px;
     padding-bottom: 47px;
   }
 
-  .collection .grid--4-col-desktop .grid__item:nth-last-child(-n + 4) .card {
+  .collection.bulk-standard-block .grid--4-col-desktop .grid__item:nth-last-child(-n + 4) .card {
     border-bottom: none;
   }
 
-  .collection .grid.product-grid::after {
+  .collection.bulk-standard-block .grid.product-grid::after {
     width: 6000px;
     margin-left: -100%;
     margin-right: -100%;
     margin-top: 0;
   }
 
-  .product-grid-container {
+  .collection.bulk-standard-block .product-grid-container {
     overflow: hidden;
   }
 
-  .form__footer {
+  .collection.bulk-standard-block .form__footer {
     display: flex;
     align-items: center;
   }
-  .form__footer .quantity {
+
+  .collection.bulk-standard-block .form__footer .quantity {
     flex: 0 0 40%;
     max-width: 40%;
   }
-  .form__footer .quick-add__submit {
+
+  .collection.bulk-standard-block .form__footer .quick-add__submit {
     flex: 0 0 60%;
     max-width: 60%;
     min-width: initial;
   }
 
-  .quantity__button {
+  .collection.bulk-standard-block .quantity__button {
     width: calc(3.5rem / var(--font-body-scale));
   }
 
-  .collection .quantity.cart-quantity {
+  .collection.bulk-standard-block .quantity.cart-quantity {
     min-height: 48px;
   }
 
-  .collection .quantity.cart-quantity,
+  .collection.bulk-standard-block .quantity.cart-quantity,
   .quantity::after {
     border-top-right-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
   }
 
-  .collection .quick-add__submit,
-  .collection .quick-add__submit::after {
+  .collection.bulk-standard-block .quick-add__submit,
+  .collection.bulk-standard-block .quick-add__submit::after {
     border-top-left-radius: 0 !important;
     border-bottom-left-radius: 0 !important;
   }
 
 
-  .collection .variant-wrapper{
+  .collection.bulk-standard-block .variant-wrapper{
     position: relative;
   }
 
-  .collection .quantity::after {
+  .collection.bulk-standard-block .quantity::after {
     box-shadow: none;
     border: 1px solid rgba(0, 0, 0, 1);
     border-right: none;
@@ -3922,23 +3941,23 @@ details-disclosure > details {
     bottom: 0;
   }
 
-  .card__heading.title-wrapper {
+  .collection.bulk-standard-block .card__heading.title-wrapper {
     text-align: center;
   }
 
-  .collection .quick-add,
-  .collection .quantity.cart-quantity {
+  .collection.bulk-standard-block .quick-add,
+  .collection.bulk-standard-block .quantity.cart-quantity {
     margin-bottom: 0;
   }
 
-  .collection .grid__item .card__inner,
-  .collection .grid__item .card__inner .card__media {
+  .collection.bulk-standard-block .grid__item .card__inner,
+  .collection.bulk-standard-block .grid__item .card__inner .card__media {
     min-height: 268px;
     max-height: 268px;
   }
 
 
-  .card-wrapper .product-link{
+  .collection.bulk-standard-block .card-wrapper .product-link{
     display: block;
     height: 100%;
     width: 100%;
