--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -149,7 +149,7 @@
           </div>
         {%- else -%}
           <div
-            class="collection{% if section.settings.filter_type != 'vertical' %} page-width{% endif %}"
+            class="collection{% if section.settings.filter_type != 'vertical' %} page-width{% endif %} {%- if section.settings.quick_add == 'bulk-standard' -%} bulk-standard-block {% endif %}"
           >
             <div class="loading-overlay gradient"></div>
             <ul
