--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -429,6 +429,7 @@
 
 .footer-block__brand-info {
   text-align: left;
+  margin-top: 2rem;
 }
 
 .footer-block:only-child .footer-block__brand-info {
@@ -585,7 +586,7 @@
 .footer-block.grid__item .footer-block__details-content.rte h5{
   font-size: 1.3rem;
   opacity: 0.6;
-  margin-bottom: 8px;
+  margin-bottom: 0;
   margin-top: 20px;
   text-transform: uppercase;
 }
@@ -739,6 +740,8 @@
     font-size: 1.6rem;
     margin-bottom: 0;
     text-transform: none;
+    font-family: var(--font-body-family-medium);
+    font-weight: 700;
   }
 
   .footer-block.grid__item .footer-block__details-content.rte h6{
