--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -666,6 +666,9 @@
                     </div> 
                   </div>
                 {% endif %} 
+              {%- when 'nutritional_facts' -%}
+                <div>
+                </div>  
             {%- endcase -%}
           {%- endfor -%}
           <a href="{{ product.url }}" class="link product__view-details animate-arrow">
@@ -2091,6 +2094,25 @@
           "id": "ingredients_heading",
           "label": "Heading",
           "default": "Ingredients"
+        }
+      ]
+    },
+    {
+      "type": "nutritional_facts",
+      "name": "t:sections.main-product.blocks.nutritional_facts.name",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "text",
+          "id": "ingredients_heading",
+          "label": "Heading",
+          "default": "Nutritional facts"
+        },
+        {
+          "type": "text",
+          "id": "weight",
+          "label": "Weight",
+          "default": "Per 100 g"
         }
       ]
     }
