--- a/assets/section-related-products.css
+++ b/assets/section-related-products.css
@@ -4,4 +4,77 @@
 
 .related-products__heading {
   margin: 0 0 3rem;
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: 130%;
+  text-transform: uppercase;
+  margin-bottom: 2.4rem;
+
+  @media screen and (min-width: 750px){
+    font-size: 3.3rem;
+    margin-bottom: 4.8rem;
+  }
 }
+
+.related-products .card__inner{
+  border-radius: 8px;
+}
+
+.related-products .card__information{
+  padding-top: 1.6rem;
+}
+
+.related-products .card__heading {
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 130%;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  text-align: center;
+}
+
+.related-products .card-information .price{
+  font-family: var(--font-body-family-medium);
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 130%;
+  text-align: center;
+}
+
+@media screen and (min-width: 1024px){
+  .related-products-section{
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    margin-bottom: 82px;
+  }
+
+  .related-products .card__inner{
+    min-height: 248px;
+  }
+
+  .related-products__heading {
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+  }
+
+  .related-products .grid.product-grid{
+    column-gap: 0;
+  }
+
+  .related-products .grid.product-grid .card{
+    padding-left: 2.6rem;
+    padding-right: 2.6rem;
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
+  }
+
+  .related-products .grid.product-grid li:last-of-type .card{
+    border-right: none;
+  }
+
+  .related-products .card__information{
+    padding-bottom: 0;
+  }
+  
+}
+
+
